--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -16,8 +16,6 @@ Yelloweye Rockfish (*Sebastes ruberrimus*) are found from the Gulf of Alaska to 
 
 Catches for Yelloweye Rockfish have averaged over 20 mt in recent years (@fig-es-landings, @tbl-es-catches). Yelloweye Rockfish was declared overfished in 2002 and remains under a rebuilding plan that substantially limits catch. However, as other rockfish stocks have rebuilt and Yelloweye Rockfish has progressed under it's rebuilding plan, catches have slowly increased in recent years, primarily in the Oregon-Washington non-trawl fleet and the recreational fleets. 
 
-**ADW - table es-catches still doubles up the years probably because of the two areas in the model - needs to be fixed**
-
 ```{r, fig-es-landings} 
 #| label: fig-es-landings
 #| echo: false 
@@ -29,7 +27,7 @@ knitr::include_graphics("figures/r4ss_plots/plots/catch2_landings_stacked.png")
 
 ```
 
-{{< pagebreak >}}
+\clearpage
 
 ::: landscape
 ```{r, tbl-es-catches, results = "asis"}
@@ -70,8 +68,6 @@ catches_es_table |>
 
 ```
 :::
-
-{{< pagebreak >}}
 
 \clearpage
 
@@ -131,14 +127,11 @@ knitr::include_graphics("figures/r4ss_plots/plots/ts9_Relative_spawning_output_i
 
 ```
 
-\clearpage
-
 ## Recruitment{-}
 
 The largest estimated recruitment events were in 1971, followed by more recently, in 2013 and 2008 (@fig-es-recruits, @tbl-es-recr). Trends in recruitment are largely consistent with the previous assessment, apart from the most recent elevated time period that is more informed with additional length composition data. Recruits for this assessment appear to have extended this more recent time period starting in 2005, with a peak in 2008 and 2013 and shifts the peak in 2001 to 2002. Recruitment in the late 2010s was estimated to be lower, but a more recent increase is seen starting in 2020.
 
 <!-- Trends and current levels relative to virgin or historic levels-include table for last 10 years and graph with long term estimates. -->
-
 
 ```{r, tbl-es-recr, results = "asis"}
 #| label: tbl-es-recr
@@ -184,8 +177,6 @@ recr_es_table |>
 knitr::include_graphics("figures/r4ss_plots/plots/ts11_Age-0_recruits_(1000s)_with_95_asymptotic_intervals.png")
 
 ```
-
-\clearpage
 
 ## Exploitation status{-}
 
@@ -239,9 +230,11 @@ No ecosystem or environmental data was used in the previous Yelloweye Rockfish a
 
 ## Reference points{-}
 
-A list of estimates of the current state of the population, as well as reference points based on 1) a target unfished spawning output of 40%, 2) a spawning potential ratio of 0.5, and 3) the model estimate of maximum sustainable yield, are all listed in @tbl-ref-points-es. Unfished spawning stock output for Yelloweye Rockfish was estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 999.2-1267.2 million eggs). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SB40%), which is estimated by the model to be 452 million eggs (95% confidence interval: 397-507), which corresponds to an exploitation rate of 0.025. This harvest rate provides an equilibrium yield of 115 mt at SB40% (95% confidence interval: 101-130 mt).
+A list of estimates of the current state of the population, as well as reference points based on 1) a target unfished spawning output of 40%, 2) a spawning potential ratio of 0.5, and 3) the model estimate of maximum sustainable yield, are all listed in @tbl-ref-points-es-1. Unfished spawning stock output for Yelloweye Rockfish was estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 999.2-1267.2 million eggs). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SB40%), which is estimated by the model to be 452 million eggs (95% confidence interval: 397-507), which corresponds to an exploitation rate of 0.025. This harvest rate provides an equilibrium yield of 115 mt at SB40% (95% confidence interval: 101-130 mt).
 
 <!-- Management targets and definitions of overfishing, including the harvest rate that brings the stock to equilibrium at B24% for flatfishes and B40% for all other groundfish stocks (BMSY proxies) and the equilibrium stock size that results from fishing at the default harvest rate (the FMSY proxy). Include a summary table that compares estimated reference points for SSB, SPR, Exploitation Rate and Yield based on SSB proxy for MSY, SPR proxy for MSY, and estimated MSY values. -->
+
+\clearpage
 
 ```{r, tbl-ref-points-es-1, results = "asis"}
 #| label: tbl-ref-points-es-1
@@ -310,6 +303,13 @@ Recent trends in total catch relative to managment guidelines is available in @t
 yelloweye_management <- read.csv("tables/yelloweye_management.csv")
  yelloweye_management |> 
    gt::gt() |>
+   gt::cols_label(
+    year = "Year",
+    `OFL..mt..` = "OFL (mt)",
+    `ABC..mt..` = "ABC (mt)",
+    `ACL..mt..` = "ACL (mt)",
+    `Catch..mt.. = "Catch (mt)"
+  ) |>
    gt::tab_options(
      table.font.size = 12,
      latex.use_longtable = TRUE
@@ -330,6 +330,8 @@ yelloweye_management <- read.csv("tables/yelloweye_management.csv")
 ## Harvest projections{-}
 
 This section will be updated after SSC GFSC review.
+
+\clearpage
 
 ::: {.landscape}
 
@@ -375,6 +377,10 @@ projections_table |>
 
 ## Decision table{-}
 
+This section will be updated after SSC GFSC review.
+
+\clearpage
+
 ```{r, 1, results = "asis"}
 #| label: tbl-es-decision-1
 #| warning: false
@@ -389,8 +395,6 @@ table_decision(
 )
 
 ```
-
-This section will be updated after SSC GFSC review.
 
 ## Scientific uncertainty{-}
 
