--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -305,10 +305,10 @@ yelloweye_management <- read.csv("tables/yelloweye_management.csv")
    gt::gt() |>
    gt::cols_label(
     `Year` = "Year",
-    `OFL..mt..` = "OFL (mt)",
-    `ABC..mt..` = "ABC (mt)",
-    `ACL..mt..` = "ACL (mt)",
-    `Catch..mt..` = "Catch (mt)"
+    `OFL..mt.` = "OFL (mt)",
+    `ABC..mt.` = "ABC (mt)",
+    `ACL..mt.` = "ACL (mt)",
+    `Catch..mt.` = "Catch (mt)"
   ) |>
    gt::tab_options(
      table.font.size = 12,
