Fixing landscape tables
again...

--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -40,6 +40,8 @@ knitr::include_graphics("figures/r4ss_plots/plots/catch2_landings_stacked.png")
 
 # changed to csv file until r4ss gets fixed
 
+cat("\\begin{landscape}\n")
+
 catches_es_table <- read.csv("tables/catches_es_table.csv")
 catches_es_table |> 
    gt::gt() |>
@@ -49,6 +51,8 @@ catches_es_table |>
      table.width = pct(80) # trying to make it fit better
    ) |>
    gt::as_latex()
+
+cat("\n\\end{landscape}\n")
 
 #catches_es_table |>
 #  gt::gt() |>
