vladas comments to data section

--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -51,7 +51,7 @@ Updated length composition data for commercial catches (trawl and non-trawl) wer
 
 New commercial age composition data from \gls{pacfin} and WDGCOP for 2017-2024 was included for Oregon and Washington. No new commercial age data were available from California. New recreational age composition data was available from \gls{recfin} from 2017 - 2024 for Washington only (extracted May 13, 2025). These data were collected in the \gls{osp}. There were also some historical updates to Oregon and Washington recreational age data provided by the state representatives.
 
-In addition to extending the length data time series, we also fixed minor data errors found in the 2017 assessment. For length composition data, years with small samples sizes (N = 1) were excluded. There were no changes in how commercial length sample numbers were calculated. However, all recent recreational fleet length data were missing the total number of trips information used to calculate the number of samples. Using data from the 2017 assessment, we built fleet-specific linear regressions to approximate the relationship of samples to the number of fish. Then, we applied that regression to the total number of fish for data between 2017 and 2024 to estimate the number of samples. A future benchmark assessment should investigate how to get the number of sampled trips from \gls{recfin} to calculate the number of samples using the @stewart_bootstrapping_2014 method.
+In addition to extending the length data time series, we also fixed minor data errors found in the 2017 assessment. For length composition data, years with small samples sizes (N = 1) were excluded. There were no changes in how commercial length sample numbers were calculated. However, for all recent recreational fleet length data, the total number of trips information used to calculate the number of samples was not available. Using data from the 2017 assessment, we built fleet-specific linear regressions to approximate the relationship of samples to the number of fish. Then, we applied that regression to the total number of fish for data between 2017 and 2024 to estimate the number of samples. A future benchmark assessment should investigate how to get the number of sampled trips from \gls{recfin} to calculate the number of samples using the @stewart_bootstrapping_2014 method.
 
 We also found that \gls{caal} data from the 2017 assessment had all sample sizes and relative proportions doubled, potentially from when Yelloweye Rockfish was changed from a two-sex to single-sex model. For most fleets this was not a problem because the proportions of age-at-length counts were the same, however, some of the commercial fleets included discard age proportions that were not doubled, leading to small differences in proportions. To fix the \gls{caal} data so it accurately represented the number of fish in each age class, we either rebuilt the entire fleet’s \gls{caal} data frame using the most recently pulled information from \gls{pacfin} and \gls{recfin}, or divided the number of samples or relative proportions in each length bin by two. How these problems were treated for each fleet specifically is detailed below, including other minor data changes. Otherwise, length and age composition data are unchanged from the previous assessment; please refer to the most recent benchmark assessment [@gertseva_stock_2017] for additional information. 
 
@@ -123,7 +123,7 @@ A log-normal generalized linear model with a log link in the \gls{sdmtmb} R pack
 
 ### Fishery-Independent Length and Age Compositions
 
-Updated length and age composition data were available for the two updated fishery-independent surveys. Compositional data from 2017 through 2024 were updated for \gls{indexwc} were obtained using functions from the [indexwc](https://github.com/pfmc-assessments/indexwc) R package [@Johnson_indexwc]. The \gls{iphc} survey compositional data were provided by \gls{wdfw}. 
+Updated length and age composition data were available for the two updated fishery-independent surveys. Compositional data from 2017 through 2024 were updated for \gls{indexwc} were obtained using functions from the [nwfscSurvey](https://github.com/pfmc-assessments/nwfscSurvey) R package [@nwfscSurvey_package_2025]. The \gls{iphc} survey compositional data were provided by \gls{wdfw}. 
 
 A summary of sampling efforts (number of hauls and number of individual fish) in all surveys is provided in @tbl-sampling-effort-triennial and @tbl-sampling-effort-nwfsc. Updated year-specific length frequency distributions generated for each survey are shown in @fig-NWFSC_lencomps and @fig-IPHC_lencomps, respectively. Updated year-specific \gls{caal} frequencies for each survey are shown in @fig-NWFSC_agecomps1 and @fig-NWFSC_agecomps2 for the \gls{indexwc} and @fig-IPHC_agecomps1 and @fig-IPHC_agecomps2. 
 
