--- a/report/asar_references.bib
+++ b/report/asar_references.bib
@@ -2401,3 +2401,10 @@ title = {Beyond visualizing catch-at-age models: Lessons learned from the r4ss p
 year = {2021},
 volume = {239}
 }
+
+@Manual{nwfscSurvey_package_2025,
+  title = {nwfscSurvey: Northwest Fisheries Science Center Survey},
+  author = {Chantel R. Wetzel and Kelli F. Johnson and Allan C. Hicks},
+  year = {2025},
+  note = {R package version 2.2},
+}
