Fixing the sensitivity tables
splitting up the index and comps sensitivity tables; included correction for modeling sens table; corrected in text reference

--- a/report/04c_model_diagnostics.qmd
+++ b/report/04c_model_diagnostics.qmd
@@ -16,7 +16,7 @@ Model results are sensitive to whether natural mortality and steepness are estim
 
 #### Sensitivity to data set choice and weighting schemes
 
-Sensitivity analyses to data set choices to examine the impact of including different data streams were conducted by selectively removing each data source using emphasis factors, as well as by including different weighting schemes for composition data. Summaries of model results for these sensitivities are presented in @tbl-sensitivities-like-comps and @tbl-sensitivities-model-specs. Among these, the base model appears to be most sensitive to removing length compositions, which show a significantly different biomass trajectory and a more optimistic estimate of stock status at the end of the time series (@fig-sens_data_spout and @fig-sens_data_status). Removing all age compositions, \gls{iphc} age compositions only, and applying the McAllister & Ianelli weighting scheme also result in slightly more optimistic estimates of stock status at the end of the time series compared to the base model (@fig-sens_data_spout and @fig-sens_data_status). Furthermore, models with all abundance and \gls{iphc} indices removed resulted in slightly less optimistic estimates of spawning output and stock status at the end of the time series (@fig-sens_indices_spout and @fig-sens_indices_status). Models removing the remaining indices consecutively did not show large differences in the final stock status estimate. A summary of the relative changes in management quantities from all sensitivity models is shown in @fig-sens_sum.
+Sensitivity analyses to data set choices to examine the impact of including different data streams were conducted by selectively removing each data source using emphasis factors, as well as by including different weighting schemes for composition data. Summaries of model results for these sensitivities are presented in @tbl-sensitivities-indices, @tbl-sensitivities-like-comps and @tbl-sensitivities-model-specs. Among these, the base model appears to be most sensitive to removing length compositions, which show a significantly different biomass trajectory and a more optimistic estimate of stock status at the end of the time series (@fig-sens_data_spout and @fig-sens_data_status). Removing all age compositions, \gls{iphc} age compositions only, and applying the McAllister & Ianelli weighting scheme also result in slightly more optimistic estimates of stock status at the end of the time series compared to the base model (@fig-sens_data_spout and @fig-sens_data_status). Furthermore, models with all abundance and \gls{iphc} indices removed resulted in slightly less optimistic estimates of spawning output and stock status at the end of the time series (@fig-sens_indices_spout and @fig-sens_indices_status). Models removing the remaining indices consecutively did not show large differences in the final stock status estimate. A summary of the relative changes in management quantities from all sensitivity models is shown in @fig-sens_sum.
  
 ### Retrospective Analysis
 
