--- a/report/08_tables.qmd
+++ b/report/08_tables.qmd
@@ -347,27 +347,50 @@ kableExtra::kable(
 
 
 ```{r}
-#| label: tbl-sensitivities-like-comps
+#| label: tbl-sensitivities-like-indices
 #| echo: false
 #| message: false
 #| warning: false
 #| results: "asis"
-#| tbl-cap: "Base model sensitivity to the removal of data sources."
+#| tbl-cap: "Base model sensitivity to the removal of data sources (indices)."
 
 cat("\\begin{landscape}\n")
 
 source(here::here("Rcode/table_sens.R"))
 indices <- read.csv(here::here("report", "figures", "sensitivities", "indices_table.csv"))
-comps <- read.csv(here::here("report", "figures", "sensitivities", "comp_data_table.csv"))
+#comps <- read.csv(here::here("report", "figures", "sensitivities", "comp_data_table.csv"))
 
-indices_and_comps <- inner_join(indices, comps, by = c("Label", "Base"))
-names(indices_and_comps) <- gsub("X..", "", names(indices_and_comps))
+#indices_and_comps <- inner_join(indices, comps, by = c("Label", "Base"))
+#names(indices) <- gsub("X..", "", names(indices))
 
-table_sens(indices_and_comps)
+table_sens(indices)
 
 cat("\n\\end{landscape}\n") 
 ```
 
+{{< pagebreak >}}
+
+```{r}
+#| label: tbl-sensitivities-like-comps
+#| echo: false
+#| message: false
+#| warning: false
+#| results: "asis"
+#| tbl-cap: "Base model sensitivity to the removal of data sources (compositional data)."
+
+cat("\\begin{landscape}\n")
+
+source(here::here("Rcode/table_sens.R"))
+#indices <- read.csv(here::here("report", "figures", "sensitivities", "indices_table.csv"))
+comps <- read.csv(here::here("report", "figures", "sensitivities", "comp_data_table.csv"))
+
+#indices_and_comps <- inner_join(indices, comps, by = c("Label", "Base"))
+#names(comps) <- gsub("X..", "", names(comps))
+
+table_sens(comps)
+
+cat("\n\\end{landscape}\n") 
+```
 
 {{< pagebreak >}}
 
@@ -381,7 +404,7 @@ cat("\n\\end{landscape}\n")
 cat("\\begin{landscape}\n")
 
 modeling <- read.csv(here::here("report", "figures", "sensitivities", "modeling_table.csv"))
-table_sens(indices_and_comps)
+table_sens(modeling)
 
 cat("\n\\end{landscape}\n") 
 ```
