--- a/report/08_tables.qmd
+++ b/report/08_tables.qmd
@@ -361,7 +361,7 @@ indices <- read.csv(here::here("report", "figures", "sensitivities", "indices_ta
 #comps <- read.csv(here::here("report", "figures", "sensitivities", "comp_data_table.csv"))
 
 #indices_and_comps <- inner_join(indices, comps, by = c("Label", "Base"))
-#names(indices) <- gsub("X..", "", names(indices))
+names(indices) <- gsub("X..", "", names(indices))
 
 table_sens(indices)
 
@@ -385,7 +385,7 @@ source(here::here("Rcode/table_sens.R"))
 comps <- read.csv(here::here("report", "figures", "sensitivities", "comp_data_table.csv"))
 
 #indices_and_comps <- inner_join(indices, comps, by = c("Label", "Base"))
-#names(comps) <- gsub("X..", "", names(comps))
+names(comps) <- gsub("X..", "", names(comps))
 
 table_sens(comps)
 
@@ -404,6 +404,8 @@ cat("\n\\end{landscape}\n")
 cat("\\begin{landscape}\n")
 
 modeling <- read.csv(here::here("report", "figures", "sensitivities", "modeling_table.csv"))
+names(modeling) <- gsub("X..", "", names(modeling))
+
 table_sens(modeling)
 
 cat("\n\\end{landscape}\n") 
