--- a/report/08_tables.qmd
+++ b/report/08_tables.qmd
@@ -385,7 +385,9 @@ source(here::here("Rcode/table_sens.R"))
 comps <- read.csv(here::here("report", "figures", "sensitivities", "comp_data_table.csv"))
 
 #indices_and_comps <- inner_join(indices, comps, by = c("Label", "Base"))
-names(comps) <- gsub("X..", "", names(comps))
+#names(comps) <- gsub("X..", "", names(comps))
+
+names(comps) <-c("- CA TWL length comps","- CA NONTWL length comps","- CA REC length comps","- ORWA TWL length comps","- ORWA NONTWL length comps","- OR REC length comps","No length comps","McAllister & Ianelli")
 
 table_sens(comps)
 
@@ -404,7 +406,7 @@ cat("\n\\end{landscape}\n")
 cat("\\begin{landscape}\n")
 
 modeling <- read.csv(here::here("report", "figures", "sensitivities", "modeling_table.csv"))
-names(modeling) <- gsub("X..", "", names(modeling))
+names(modeling) <- gsub("X", "", names(modeling))
 
 table_sens(modeling)
 
