addressed vladas edits in model diagnostics section

--- a/report/04c_model_diagnostics.qmd
+++ b/report/04c_model_diagnostics.qmd
@@ -31,7 +31,7 @@ Likelihood profiles were conducted for natural mortality ($M$), stock-recruit st
 
 In the assessment, $M$ was fixed at the value of 0.044, based on Hamel’s prior. The profile analysis over $M$ showed that the negative log-likelihood was minimized with a value around 0.052 (@fig-natm-piner), which is close to what was assumed in the assessment. The time series of absolute and relative spawning output associated with different values of $M$ ranging from 0.03 to 0.06 are shown in @fig-natm-bratio.
 
-In the base model $h$ is fixed at 0.718, like the 2017 assessment, because much higher values (e.g. 0.9) are implausible given the life-history of slow growing rockfish. The likelihood profile for $h$ shows that the negative log-likelihood for the base model declines with increasing $h$ to a value around 0.7, notably different from the sensitivity analysis (@fig-steep-piner). Time series of relative unfished biomass associated with different values of $h$ ranging from 0.25 to 1.0 are shown in @fig-steep-bratio.
+In the base model, $h$ is fixed at the mean of the meta-analytic steepness prior, 0.718, which is the same as in the 2017 assessment; much higher values (e.g. 0.9) are considered implausible given the life-history of slow growing rockfish. The likelihood profile for $h$ shows that the negative log-likelihood for the base model declines with increasing $h$ to a value around 0.7, notably different from the sensitivity analysis (@fig-steep-piner). Time series of relative unfished biomass associated with different values of $h$ ranging from 0.25 to 1.0 are shown in @fig-steep-bratio.
 
 A likelihood profile analysis for ln($R$~0~) shows a strongly informed initial recruitment value in the base model (@fig-rzero-piner). Most of the information for this parameter is coming from the length data. Within the length composition likelihood component, all sources of length compositions are equally informative. The index and age data are relatively uninformative. Changes in ln($R$~0~) results in relatively small changes in the scale of the population (@fig-rzero-sp-output and @fig-rzero-parm) compared to the 2017 assessment model. 
 
