--- a/report/05_management.qmd
+++ b/report/05_management.qmd
@@ -12,7 +12,7 @@ This assessment estimates that the stock of Yelloweye Rockfish off the continent
 
 Reference points for the base model are summarized in @tbl-ref-points-es-2. Unfished spawning stock output for Yelloweye Rockfish was estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 999.2-1267.2 million eggs). The stock is declared overfished if the current spawning output is estimated to be below the \gls{msst} of 25% of unfished level (SB25%). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SB40%), which is estimated by the model to be 452 million eggs (95% confidence interval: 397-507), which corresponds to an exploitation rate of 0.025. This harvest rate provides an equilibrium yield of 115 mt at SB40% (95% confidence interval: 101-130 mt). The model estimate of maximum sustainable yield (MSY) is 121 mt (95% confidence interval: 106-136 mt). The estimated spawning stock output at MSY is 327 million eggs (95% confidence interval: 287-367 million eggs). The exploitation rate corresponding to the estimated SPRMSY of F36% is 0.036.
 
-This assessment estimates that the 2024 SPR is `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SPRratio_2024")], 3)`. The SPR used for setting the OFL is 50%, while the SPR-based management fishing mortality target specified in the current rebuilding plan and used to determine the ACL is 76%. Relative exploitation rates (calculated as catch/biomass of age-8 and older fish) are estimated to have been below 1% during the last decade. This assessment estimates that Yelloweye Rockfish was fished beyond the relative SPR ratio (calculated as 1-SPR/1-SPRTarget=0.5) between 1977 and 2000. The equilibrium yield curve is shown in @fig-eq-yield.
+This assessment estimates that the 2024 SPR is `r 1-round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SPRratio_2024")], 3)*100`% (@fig-time-spr). The SPR used for setting the OFL is 50%, while the SPR-based management fishing mortality target specified in the current rebuilding plan and used to determine the ACL is 76%. Relative exploitation rates (calculated as catch/biomass of age-8 and older fish) are estimated to have been below 1% during the last decade. This assessment estimates that Yelloweye Rockfish was fished beyond the relative SPR ratio (calculated as 1-SPR/1-SPRTarget=0.5) between 1977 and 2000. The equilibrium yield curve is shown in @fig-eq-yield.
 
 ## Harvest Projections and Decision Tables
 
