--- a/report/09_figures.qmd
+++ b/report/09_figures.qmd
@@ -425,7 +425,7 @@ knitr::include_graphics(
 #| fig-cap: "Fit to the California MRFSS recreational index."
 #
 knitr::include_graphics(
-    "figures/r4ss_plots/plots/index2_cpuefit_3_CA_REC.png"
+    "figures/r4ss_plots/plots/index5_logcpuefit_3_CA_REC.png"
 )
 ```
 
@@ -437,7 +437,7 @@ knitr::include_graphics(
 #| fig-cap: "Fit to the Oregon recreational index."
 #
 knitr::include_graphics(
-    "figures/r4ss_plots/plots/index2_cpuefit_6_OR_REC.png"
+    "figures/r4ss_plots/plots/index5_logcpuefit_6_OR_REC.png"
 )
 ```
 
@@ -449,7 +449,7 @@ knitr::include_graphics(
 #| fig-cap: "Fit to the Washington recreational index."
 #
 knitr::include_graphics(
-    "figures/r4ss_plots/plots/index2_cpuefit_7_WA_REC.png"
+    "figures/r4ss_plots/plots/index5_logcpuefit_7_WA_REC.png"
 )
 ```
 
@@ -461,7 +461,7 @@ knitr::include_graphics(
 #| fig-cap: "Fit to the California CPFV observer index."
 #
 knitr::include_graphics(
-    "figures/r4ss_plots/plots/index2_cpuefit_8_CACPFV.png"
+    "figures/r4ss_plots/plots/index5_logcpuefit_8_CACPFV.png"
 )
 ```
 
@@ -473,7 +473,7 @@ knitr::include_graphics(
 #| fig-cap: "Fit to the Oregon onboard observer (ORFS) index."
 #
 knitr::include_graphics(
-    "figures/r4ss_plots/plots/index2_cpuefit_9_OR_RECOB.png"
+    "figures/r4ss_plots/plots/index5_logcpuefit_9_OR_RECOB.png"
 )
 ```
 
@@ -485,7 +485,7 @@ knitr::include_graphics(
 #| fig-cap: "Fit to the Triennial survey index."
 #
 knitr::include_graphics(
-    "figures/r4ss_plots/plots/index2_cpuefit_10_TRI_ORWA.png"
+    "figures/r4ss_plots/plots/index5_logcpuefit_10_TRI_ORWA.png"
 )
 ```
 
@@ -497,7 +497,7 @@ knitr::include_graphics(
 #| fig-cap: "Fit to the WCBTS index."
 #
 knitr::include_graphics(
-    "figures/r4ss_plots/plots/index2_cpuefit_11_NWFSC_ORWA.png"
+    "figures/r4ss_plots/plots/index5_logcpuefit_11_NWFSC_ORWA.png"
 )
 ```
 
@@ -509,7 +509,7 @@ knitr::include_graphics(
 #| fig-cap: "Fit to the IPHC survey index."
 #
 knitr::include_graphics(
-    "figures/r4ss_plots/plots/index2_cpuefit_12_IPHC_ORWA.png"
+    "figures/r4ss_plots/plots/index5_logcpuefit_12_IPHC_ORWA.png"
 )
 ```
 
@@ -553,11 +553,101 @@ knitr::include_graphics(
 )
 ```
 
-<!-- add mean length fits here if needed -->
+```{r}
+#| label: fig-mean-age-2
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "Mean age from conditional data (aggregated across length bins) for the CA NONTWL fleet with 95% confidence intervals based on input sample sizes. The blue line is the model expectation."
 
-<!-- add ghost age comps here if needed -->
+knitr::include_graphics(
+    "figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge2_CA_NONTWL.png"
+)
+```
 
-<!-- add CAAL fits here if needed -->
+```{r}
+#| label: fig-mean-age-3
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "Mean age from conditional data (aggregated across length bins) for the CA REC fleet with 95% confidence intervals based on input sample sizes. The blue line is the model expectation."
+
+knitr::include_graphics(
+    "figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge3_CA_REC.png"
+)
+```
+
+```{r}
+#| label: fig-mean-age-4
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "Mean age from conditional data (aggregated across length bins) for the ORWA TWL fleet with 95% confidence intervals based on input sample sizes. The blue line is the model expectation."
+
+knitr::include_graphics(
+    "figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge4_ORWA_TWL.png"
+)
+```
+
+```{r}
+#| label: fig-mean-age-5
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "Mean age from conditional data (aggregated across length bins) for the ORWA NONTWL fleet with 95% confidence intervals based on input sample sizes. The blue line is the model expectation."
+
+knitr::include_graphics(
+    "figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge5_ORWA_NONTWL.png"
+)
+```
+
+```{r}
+#| label: fig-mean-age-6
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "Mean age from conditional data (aggregated across length bins) for the ORWA REC fleet with 95% confidence intervals based on input sample sizes. The blue line is the model expectation."
+
+knitr::include_graphics(
+    "figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge6_OR_REC.png"
+)
+```
+
+```{r}
+#| label: fig-mean-age-7
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "Mean age from conditional data (aggregated across length bins) for the WA REC fleet with 95% confidence intervals based on input sample sizes. The blue line is the model expectation."
+
+knitr::include_graphics(
+    "figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge7_WA_REC.png"
+)
+```
+
+```{r}
+#| label: fig-mean-age-11
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "Mean age from conditional data (aggregated across length bins) for the WCGBTS with 95% confidence intervals based on input sample sizes. The blue line is the model expectation."
+
+knitr::include_graphics(
+    "figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge11_NWFSC_ORWA.png"
+)
+```
+
+```{r}
+#| label: fig-mean-age-12
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "Mean age from conditional data (aggregated across length bins) for the IPHC survey with 95% confidence intervals based on input sample sizes. The blue line is the model expectation."
+
+knitr::include_graphics(
+    "figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge12_IPHC_ORWA.png"
+)
+```
 
 ```{r}
 #| label: fig-spout_combined
